# chew-cadence

./: .gitignore  README.md  config.py  pyproject.toml
chew/: baseline.py  cadence.py  cue.py  detector.py  dsp.py  logger.py  offline.py  policy.py
scripts/: make_synthetic.py  phase0_inspect.py  phase1_offline.py  phase2_viz.py  phase3_baseline.py  phase4_live.py  phase5_analyze.py
tests/: test_pipeline.py
